[gd_scene load_steps=18 format=2]

[ext_resource path="res://Texturs/kek34.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Canon.gd" type="Script" id=2]
[ext_resource path="res://Sound/Gun.wav" type="AudioStream" id=3]
[ext_resource path="res://Texturs/Sprites1.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 226, 193, 11, 15 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 111.899, 170, 31.1009, 10.1718 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 156, 176, 8, 14 )

[sub_resource type="Animation" id=7]
resource_name = "Laser"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 6 ) ]
}

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 112, 170, 31, 10 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 112, 138, 31, 10 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 160, 138, 30, 10 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 160, 106, 30, 11 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 155, 176, 9, 14 )

[sub_resource type="Animation" id=12]
resource_name = "Laser_attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1.03526 ),
"update": 1,
"values": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ SubResource( 14 ) ]
}

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 225, 180, 28, 7 )

[sub_resource type="Animation" id=13]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 2 ) ]
}

[node name="Canon" type="StaticBody2D" groups=["LevelNav"]]
z_index = 1
collision_layer = 4
collision_mask = 5
script = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="OffTimer" type="Timer" parent="."]
one_shot = true

[node name="Gun" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 4.0
pitch_scale = 0.5
max_distance = 500.0
attenuation = 4.0
area_mask = 4

[node name="Sprite2" type="Sprite" parent="."]
texture = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Laser = SubResource( 7 )
anims/Laser_attack = SubResource( 12 )
anims/RESET = SubResource( 13 )

[node name="LaserTime" type="Timer" parent="."]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
rotation = -1.5708
texture = SubResource( 4 )
offset = Vector2( 8, 0 )

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 24, 0 )

[connection signal="shoot" from="." to="." method="_on_Canon_shoot"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="OffTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="OffTimer" to="." method="_on_OffTimer_timeout"]
